# tiny-bank-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
config/: default.toml
db/init/: 01-init.sql
migrations/: 20250623100000_create_users_table.sql
src/: main.rs
