[package]
name = "tiny-bank-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.12.20", features = ["json", "rustls-tls-native-roots"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] } # Enable JSON feature for structured logging
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# --- FIX: Add config crate for production-grade configuration ---
config = { version = "0.15.11", features = ["toml"] }


[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
